--- a/app/styles/theme.scss
+++ b/app/styles/theme.scss
@@ -5,7 +5,7 @@ $brand-large-number-font-family: 'PT Sans', sans-serif;
 $brand-color: #01a982;
 $brand-color-lighter: desaturate(lighten($brand-color, 55%), 40%);
 $brand-neutral-colors: (#38424e, #5F7A76, #80746E, #767676) !default;
-$brand-accent-colors: (#2AD2C9, #614767, #ff8d6d) !default;
+$brand-accent-colors: (#ffdb44, #614767, #ff8d6d) !default;
 $brand-status-colors: (
   critical: #F04953,
   error: #F04953,
