Update mobile nav styling.

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -23,6 +23,10 @@ div {
   max-width: 100%;
 }
 
+.grommetux-layer .grommetux-layer__container {
+  padding: 0;
+}
+
 .grommetux-toast__status {
   align-self: center;
   padding: 0 !important;
